#feat: Ajustado endpoint

--- a/mototrace-app/src/app/views/dispositivos/adicionar-dispositivos-modal/adicionar-dispositivos-modal.component.html
+++ b/mototrace-app/src/app/views/dispositivos/adicionar-dispositivos-modal/adicionar-dispositivos-modal.component.html
@@ -10,7 +10,7 @@
     <c-modal-body>
         <c-row>
             <c-col [md]="6" [xs]="12">
-                <label cLabel for="inputCodigo">Código UUID</label>
+                <label cLabel for="inputCodigo">Código Identificador</label>
                 <input id="inputCodigo" cFormControl class="mb-3" [(ngModel)]="dispositivo.codigo"/>
             </c-col>
             <c-col [md]="6" [xs]="12" class="select-responsive">
