--- a/mototrace-app/src/app/views/bloqueio/bloqueio.component.html
+++ b/mototrace-app/src/app/views/bloqueio/bloqueio.component.html
@@ -63,28 +63,28 @@
                 <button cButton [color]="'danger'" class="button-legenda">
                     <img class="icon-legenda" ngSrc="assets/bloqueio/bloqueado.png" alt="Icone" height="32" width="32">
                 </button>
-                Ignição da motocicleta bloqueada
+                Ignição bloqueada
             </c-callout>
             <c-callout color="success">
                 <button cButton [color]="'success'" class="button-legenda">
                     <img class="icon-legenda" ngSrc="assets/bloqueio/desbloqueado.png" alt="Icone" height="32"
                          width="32">
                 </button>
-                Ignição da motocicleta desbloqueada
+                Ignição desbloqueada
             </c-callout>
             <c-callout color="warning">
                 <button cButton [color]="'warning'" class="button-legenda">
                     <img class="icon-legenda" ngSrc="assets/bloqueio/notificacao-ativa.png" alt="Icone" height="32"
                          width="32">
                 </button>
-                Notificação ativada para qualquer movimentação da motocicleta
+                Notificação ativada para movimentações
             </c-callout>
             <c-callout color="info">
                 <button cButton [color]="'info'" class="button-legenda">
                     <img class="icon-legenda" ngSrc="assets/bloqueio/notificacao-desativada.png" alt="Icone" height="32"
                          width="32">
                 </button>
-                Notificação desativada para qualquer movimentação da motocicleta
+                Notificação desativada para movimentações
             </c-callout>
         </c-col>
     </c-card-body>
